--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/mdx": "^0.11.5",
     "@astrojs/tailwind": "^2.1.0",
+    "@contentful/rich-text-html-renderer": "^16.3.3",
     "astro": "^1.5.0",
+    "contentful": "^10.6.18",
     "tailwindcss": "^3.1.8",
     "typescript": "^5.3.3"
   },
