--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "preview": "astro preview",
     "astro": "astro"
   },
-  "dependencies": {
-    "@astrojs/check": "^0.4.1",
-    "@astrojs/tailwind": "^2.1.0",
+  "devDependencies": {
     "@contentful/rich-text-html-renderer": "^16.3.3",
-    "astro": "^1.5.0",
+    "@contentful/rich-text-types": "^16.3.3",
+    "astro": "^3.6.4",
+    "autoprefixer": "^10.4.2",
     "contentful": "^10.6.18",
-    "tailwindcss": "^3.1.8",
+    "daisyui": "^4.6.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13"
+  "dependencies": {
+    "@astrojs/tailwind": "^5.1.0"
   }
 }
