--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^5.1.0"
+    "@astrojs/tailwind": "^5.1.0",
+    "sharp": "^0.33.2"
   }
 }
